@@ -237,15 +237,25 @@ public class JyDamageExceptionServiceImpl extends JyExceptionStrategy implements
             logger.warn("abnormalDocumentNum or createDept 为空！");
             return;
         }
-        String barCodes = qcReportJmqDto.getPackageNumber();
-        String[] barCodeList = barCodes.split(Constants.SEPARATOR_COMMA);
-        for (String packageCode : barCodeList) {
-            dealByPackageNumber(qcReportJmqDto, packageCode);
+        String barCode = qcReportJmqDto.getAbnormalDocumentNum();
+        dealExpDamageInfo(barCode, qcReportJmqDto);
+        if (StringUtils.isNotBlank(qcReportJmqDto.getPackageNumber())) {
+            String barCodes = qcReportJmqDto.getPackageNumber();
+            String[] barCodeList = barCodes.split(Constants.SEPARATOR_COMMA);
+            for (String packageCode : barCodeList) {
+                dealExpDamageInfo(packageCode, qcReportJmqDto);
+            }
         }
     }
 
-    private void dealByPackageNumber(QcReportJmqDto qcReportJmqDto, String packageCode) {
-        String bizId = getBizId(packageCode, Integer.valueOf(qcReportJmqDto.getCreateDept()));
+
+    /**
+     * 处理异常破损信息
+     * @param barCode 条形码
+     * @param qcReportJmqDto 质控报告JMQ数据传输对象
+     */
+    public void dealExpDamageInfo(String barCode, QcReportJmqDto qcReportJmqDto) {
+        String bizId = getBizId(barCode, new Integer(qcReportJmqDto.getCreateDept()));
         String existKey = "DMS.EXCEPTION.DAMAGE:" + bizId;
         try {
             if (!redisClient.set(existKey, "1", 1, TimeUnit.SECONDS, false)) {
@@ -317,7 +327,6 @@ public class JyDamageExceptionServiceImpl extends JyExceptionStrategy implements
             redisClient.del(existKey);
         }
     }
-
 
     /**
      * 发送破损数据给客服
